Correction relative à Template.js

--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
         "action":"defaultAction",
         "default":true
     },
-    "add_player":
+    "bouboup":
     {
         "hash":"bouboup",
         "controller":"Index",
@@ -46,10 +46,10 @@
         </menu>
         <div id="container"></div>
         <div id="loader"></div>
-        <script type="html/template" id="Index_defaultAction_tpl">
+        <script type="text/template" id="Index_defaultAction_tpl">
         <h1>Hello Framework</h1>
         </script>
-        <script type="html/template" id="Index_secondAction_tpl">
+        <script type="text/template" id="Index_secondAction_tpl">
             <h1>Hell yeah</h1>
         </script>
     </body>
