Correction des urls pour support du HTTPS

--- a/src/index.html
+++ b/src/index.html
@@ -3,8 +3,8 @@
     <head>
         <title>JS Framework</title>
         <link href="assets/css/style.css" rel="stylesheet">
-        <link href='http://fonts.googleapis.com/css?family=Lato:400,900' rel='stylesheet' type='text/css'>
-        <script src="../../Dependencies/src/?need=Template"></script>
+        <link href='https://fonts.googleapis.com/css?family=Lato:400,900' rel='stylesheet' type='text/css'>
+        <script src="https://dependencies.arnaud-nicolas.fr/?need=Template"></script>
         <script type="application/json" id="routing_rules">
 {
     "home":
